# youbot_diagnostics

youbot_battery_monitor/: CMakeLists.txt  package.xml
youbot_battery_monitor/include/youbot_battery_monitor/: youbot_battery_monitor.h
youbot_battery_monitor/src/: youbot_battery_monitor.cpp  youbot_battery_monitor_node.cpp
youbot_dashboard/: CMakeLists.txt  package.xml  plugin.xml  setup.py
youbot_dashboard/ros/src/youbot_dashboard/: youbot_dashboard.py
youbot_dashboard/src/youbot_dashboard/: youbot_dashboard.py  youbot_ethercat.py  youbot_motors.py
youbot_diagnostic_aggregator/: CMakeLists.txt  package.xml
youbot_diagnostic_aggregator/ros/launch/: diagnostic_aggregator.launch
youbot_diagnostics/: package.xml
